# stacks-wars

./: .gitignore  Cargo.toml  LICENSE  README.md  lefthook.yml  package.json
apps/backend/: Cargo.toml
apps/backend/contract/stacks/: Clarinet.toml  package.json  vitest.config.js
apps/backend/contract/stacks/contracts/: STACKS-WARS-TOKEN.clar  ft-vault.clar  sponsored-ft-vault.clar  sponsored-ft-vault.tests.clar  sponsored-stx-vault.clar  sponsored-stx-vault.tests.clar  stx-vault.clar
apps/backend/contract/stacks/deployments/: default.simnet-plan.yaml
apps/backend/migrations/: 20251024180000_init_schema.down.sql  20251209000000_schema.down.sql  20251209000000_schema.up.sql  20251216140800_init_schema.up.sql
apps/backend/src/: errors.rs  lib.rs  main.rs  middleware.rs  state.rs
apps/backend/src/auth/: extractors.rs  jwt.rs
apps/backend/src/db/: mod.rs
apps/backend/src/db/chat/: get.rs  post.rs
apps/backend/src/db/game/: create.rs  delete.rs  mod.rs  read.rs  update.rs  words.rs
apps/backend/src/games/: coin_flip.rs  common.rs  error.rs  lexi_wars.rs  mod.rs  registry.rs
apps/backend/src/lobby/: engine.rs  messages.rs  mod.rs
apps/backend/src/models/: chat_message.rs  game.rs  keys.rs  lobby.rs  lobby_state.rs  mod.rs  platform_rating.rs  player_state.rs  season.rs  stacks.rs  user.rs  username.rs  wallet_address.rs
apps/backend/src/ws/: broadcast.rs  mod.rs  routes.rs
apps/backend/tests/: games.rs  rate_limit.rs  ws.rs
apps/backend/tests/common/: mod.rs  ws_helper.rs
apps/backend/tests/games/: coinflip.rs
apps/backend/tests/http_routes/: game.rs  lobby.rs  platform_rating.rs  season.rs  user.rs
apps/backend/tests/migrations/: 20251209000000_schema.up.sql  20251216140800_init_schema.up.sql
apps/backend/tests/ws/: lobby.rs  message_wrapping_test.rs  room.rs
(+448 files in other folders)
